:package::wrench: Update manifest

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "displayName": "Aylin",
   "description": "Aylin is a modern and minimal VS Code dark theme with bright colors.",
   "version": "1.0.0",
-  "publisher": "AhmedAbdulrahman",
+  "publisher": "Ahmed Abdulrahman",
+  "preview": true,
   "license": "MIT",
   "engines": {
     "vscode": "^1.37.0"
@@ -12,6 +13,10 @@
   "categories": [
     "Themes"
   ],
+  "galleryBanner": {
+		"color": "#1f2531",
+		"theme": "dark"
+	},
   "keywords": [
     "icon-theme",
     "theme",
