--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "engines": {
     "vscode": "^1.37.0"
   },
-  "icon": "https://raw.githubusercontent.com/AhmedAbdulrahman/aylin-vscode-theme/master/icon.png",
+  "icon": "icon.png",
   "categories": [
     "Themes"
   ],
