--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Aylin",
   "description": "Aylin is a modern and minimal VS Code dark theme with bright colors.",
   "version": "1.1.0",
-  "publisher": "AhmedAbdulrahman",
+  "publisher": "stepper",
   "preview": true,
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
@@ -33,6 +33,9 @@
         "path": "./themes/aylin.json"
       }
     ]
+  },
+  "author": {
+    "name": "Ahmed Abdulrahman"
   },
   "repository": {
     "type": "git",
