--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Aylin",
   "description": "Aylin is a modern and minimal VS Code dark theme with bright colors.",
   "version": "1.0.0",
-  "publisher": "stepper",
+  "publisher": "AhmedAbdulrahman",
   "preview": true,
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
